# quiz_editor

./: .gitignore  Makefile  README.md  amc_exporter.py  amc_exporter_pgf.py  bump_version.py  convert_quiz_format.py  convert_to_html_exam.py  convert_to_interactive_html.py  i18n.py  make_language.mak  pyproject.toml  quiz_editor.py  requirements.txt  run.py
.devcontainer/: devcontainer.json
examples_exports/: export_demo.html  export_demo.tex  export_demo_exam.html
locales/: quiz_editor.pot
locales/ar/LC_MESSAGES/: quiz_editor.mo
locales/de/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
locales/en/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po  quiz_editor.po~
locales/es/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
locales/fr/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
locales/it/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
src/quiz_editor/: __init__.py  amc_exporter.py  cli.py  convert_quiz_format.py  convert_to_html_exam.py  convert_to_interactive_html.py  convert_utils.py  i18n.py  quiz_editor.py
src/quiz_editor/locales/: quiz_editor.pot
src/quiz_editor/locales/ar/LC_MESSAGES/: quiz_editor.po
src/quiz_editor/locales/cn/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
src/quiz_editor/locales/de/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
src/quiz_editor/locales/en/LC_MESSAGES/: quiz_editor.mo  quiz_editor.po
src/quiz_editor/locales/es/LC_MESSAGES/: quiz_editor.po
src/quiz_editor/locales/fr/LC_MESSAGES/: quiz_editor.mo
src/quiz_editor/locales/it/LC_MESSAGES/: quiz_editor.mo
